--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,14 +17,13 @@
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<b class="name">John Reid</a>,<br/>
+			<b class="name">John Reid</b>,<br/>
 			and is based on a transcription produced in 2001 by<br/>
 			<b class="name">Jim Tinsley</b>, <b class="name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2607">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/in.ernet.dli.2015.95638">Internet Archive</a></p>
-			and the<br/>
+			<a href="https://archive.org/details/in.ernet.dli.2015.95638">Internet Archive</a> and the<br/>
 			<a href="https://catalog.hathitrust.org/Record/007106734">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
