--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,102 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">Psmith, Journalist</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: “Cosy Moments”</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Billy Windsor</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: At “The Gardenia”</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Bat Jarvis</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Planning Improvements</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Tenements</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Visitors at the Office</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Honeyed Word</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Full Steam Ahead</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Going Some</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: The Man at the Astor</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: A Red Taximeter</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Reviewing the Situation</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The Highfield</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: An Addition to the Staff</a>
+						</li>
+						<li>
+							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: The First Battle</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Guerilla Warfare</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: An Episode by the Way</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: In Pleasant Street</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Cornered</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Battle of Pleasant Street</a>
+						</li>
+						<li>
+							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Concerning <abbr>Mr.</abbr> Waring</a>
+						</li>
+						<li>
+							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Reductions in the Staff</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: A Gathering of Cat-Specialists</a>
+						</li>
+						<li>
+							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Trapped</a>
+						</li>
+						<li>
+							<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: A Friend in Need</a>
+						</li>
+						<li>
+							<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Psmith Concludes His Ride</a>
+						</li>
+						<li>
+							<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Standing Room Only</a>
+						</li>
+						<li>
+							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Knockout for <abbr>Mr.</abbr> Waring</a>
+						</li>
+						<li>
+							<a href="text/conclusion.xhtml">Conclusion</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +129,13 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/preface.xhtml" epub:type="frontmatter preface">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Psmith, Journalist</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
