--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,12 +23,13 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2607">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/in.ernet.dli.2015.95638">Internet Archive</a> and the<br/>
+			<a href="https://archive.org/details/in.ernet.dli.2015.95638">Internet Archive</a><br/>
+			and the<br/>
 			<a href="https://catalog.hathitrust.org/Record/007106734">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Richard Humphreys, the Boxer</i>,<br/>
+			a painting completed in 1787 by<br/>
+			<a href="https://en.wikipedia.org/wiki/John_Hoppner">John Hoppner</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
