--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -89,7 +89,7 @@
 							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Reductions in the Staff</a>
 						</li>
 						<li>
-							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: A Gathering of Cat-Specialists</a>
+							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: A Gathering of Cat Specialists</a>
 						</li>
 						<li>
 							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Trapped</a>
