--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,13 +13,13 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">Psmith, Journalist</i><br/>
 			was published in 1923 by<br/>
-			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr class="name">P. G.</abbr> Wodehouse</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/P._G._Wodehouse"><abbr epub:type="z3998:given-name">P. G.</abbr> Wodehouse</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<b class="name">John Reid</b>,<br/>
+			<b epub:type="z3998:personal-name">John Reid</b>,<br/>
 			and is based on a transcription produced in 2001 by<br/>
-			<b class="name">Jim Tinsley</b>, <b class="name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Jim Tinsley</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2607">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
