--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,10 +22,8 @@
 			<b epub:type="z3998:personal-name">Jim Tinsley</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/2607">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/in.ernet.dli.2015.95638">Internet Archive</a><br/>
-			and the<br/>
-			<a href="https://catalog.hathitrust.org/Record/007106734">HathiTrust Digital Library</a>.</p>
+			and on digital scans from<br/>
+			<a href="https://standardebooks.org/ebooks/p-g-wodehouse/psmith-journalist#page-scans">various sources</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Richard Humphreys, the Boxer</i>,<br/>
 			a painting completed in 1787 by<br/>
