Add z3998:name-title semantic to some abbreviations

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -83,7 +83,7 @@
 							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Battle of Pleasant Street</a>
 						</li>
 						<li>
-							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Concerning <abbr>Mr.</abbr> Waring</a>
+							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Concerning <abbr epub:type="z3998:name-title">Mr.</abbr> Waring</a>
 						</li>
 						<li>
 							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Reductions in the Staff</a>
@@ -104,7 +104,7 @@
 							<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Standing Room Only</a>
 						</li>
 						<li>
-							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Knockout for <abbr>Mr.</abbr> Waring</a>
+							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Knockout for <abbr epub:type="z3998:name-title">Mr.</abbr> Waring</a>
 						</li>
 						<li>
 							<a href="text/conclusion.xhtml">Conclusion</a>
