--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="frontmatter z3998:fiction">
+	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="preface" epub:type="preface">
 			<h2 epub:type="title">Preface</h2>
 			<p>The conditions of life in New York are so different from those of London that a story of this kind calls for a little explanation. There are several million inhabitants of New York. Not all of them eke out a precarious livelihood by murdering one another, but there is a definite section of the population which murders⁠—not casually, on the spur of the moment, but on definitely commercial lines at so many dollars per murder. The “gangs” of New York exist in fact. I have not invented them. Most of the incidents in this story are based on actual happenings. The Rosenthal case, where four men, headed by a genial individual calling himself “Gyp the Blood” shot a fellow-citizen in cold blood in a spot as public and fashionable as Piccadilly Circus and escaped in a motorcar, made such a stir a few years ago that the noise of it was heard all over the world and not, as is generally the case with the doings of the gangs, in New York only. Rosenthal cases on a smaller and less sensational scale are frequent occurrences on Manhattan Island. It was the prominence of the victim rather than the unusual nature of the occurrence that excited the New York press. Most gang victims get a quarter of a column in small type.</p>
